# rescue_dd_rescue

./: .gitignore  CRYPT_TODO  Make-Android  Makefile  Makefile.android  Makefile.android.arm32  Makefile.android.arm32abi28  Makefile.android.arm32pie  Makefile.android.arm64  Makefile.android.arm64abi28  README.dd_rescue  TODO  aes.c  aes.h  aes_arm32.c  aes_arm64.c  aes_arm8.c  aes_c.c  aes_c.h  aes_ossl.c  aes_ossl.h  aes_ossl10.c  aes_ossl11.c  aesni.c  aesni.h  archdep.h  break_lzo.c  calchmac.py  checksum_file.c  checksum_file.h  config.h.in  config.status  configure  configure.ac  configure.in  dd_rescue.1  dd_rescue.c  ddr_crypt.1  ddr_ctrl.h  ddr_lzma.1  (+56 more)
autom4te.cache/: output.0  output.1  requests  traces.1
